[package]
name = "allegedly"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = "1.0.99"
async-compression = { version = "0.4.30", features = ["futures-io", "tokio", "gzip"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
env_logger = "0.11.8"
flume = "0.11.1"
futures = "0.3.31"
log = "0.4.28"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = "1.0.219"
serde_json = { version = "1.0.143", features = ["raw_value"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
url = "2.5.7"
