[package]
name = "allegedly"
description = "public ledger server tools and services (for the PLC)"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
default-run = "allegedly"

[dependencies]
anyhow = "1.0.99"
async-compression = { version = "0.4.30", features = ["futures-io", "tokio", "gzip"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
futures = "0.3.31"
governor = "0.10.1"
http-body-util = "0.1.3"
log = "0.4.28"
poem = { version = "3.1.12", features = ["acme", "compression"] }
reqwest = { version = "0.12.23", features = ["stream", "json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
rustls = "0.23.32"
serde = "1.0.219"
serde_json = { version = "1.0.143", features = ["raw_value"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
